# bbgotchi

./: App.tsx  CHANGELOG.md  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts
alphapulse/: .env.example  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
alphapulse/bot/: __init__.py  telegram_bot.py
alphapulse/db/: __init__.py  models.py
alphapulse/processors/: __init__.py  helius_handler.py  signal_processor.py  webhook_security.py
alphapulse/scrapers/: __init__.py  dexscreener_scraper.py  gmgn_scraper.py
alphapulse/services/: __init__.py  backtester.py  conviction_calculator.py  outcome_tracker.py  position_tracker.py  rug_detector.py  token_metadata.py
alphapulse/utils/: __init__.py  logger.py
components/: Collectibles.tsx  Gallery.tsx  GameRoom.tsx  HomeScreen.tsx  MemoryForm.tsx  Modals.tsx  PetView.tsx  StatusBar.tsx  Terrarium.tsx  UnlockModal.tsx
components/avatars/: SharkwowAvatar.tsx
components/games/: Match3Game.tsx  PongGame.tsx
services/: gemini.ts  saveState.ts  terrariumAssets.ts
