[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphapulse"
version = "0.1.0"
description = "Solana Smart Wallet Tracker - Monitor high-conviction traders for early token signals"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AlphaPulse"}
]
keywords = ["solana", "crypto", "trading", "smart-money", "wallet-tracker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "playwright>=1.40.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "python-telegram-bot>=20.7",
    "solana>=0.32.0",
    "solders>=0.20.0",
    "base58>=2.1.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "asyncio-throttle>=1.0.2",
    "structlog>=24.1.0",
    "colorama>=0.4.6",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[project.scripts]
alphapulse = "alphapulse.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["alphapulse*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
